--- a/ode-estimation.ipynb
+++ b/ode-estimation.ipynb
@@ -11,6 +11,7 @@
     "- Second-Order Runge-Kutta Method\n",
     "- Third-Order Runge-Kutta Method\n",
     "- Fourth-Order Runge-Kutta Method\n",
+    "\n",
     "which I will refer to as RK1, RK2, RK3, and RK4 respectively.\n",
     "\n",
     "The goal of this project is to demonstrate the **trade-off in computational efficiency for increased accuracy with a constant step size** as the complexity of the estimation method increases."
@@ -18,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
     "#include <cmath>\n",
     "#include <vector>\n",
     "\n",
-    "//(x,y)\n",
+    "// (x,y)\n",
     "struct pair {\n",
     "    double x;\n",
     "    double y;\n",
@@ -46,11 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "//y' = axy (Separable)\n",
+    "// y' = axy (Separable)\n",
     "class DifferentialEquation {\n",
     "private:\n",
     "    double a;\n",
     "public:\n",
+    "    DifferentialEquation(double d) {\n",
+    "        a = d;\n",
+    "    }\n",
+    "    \n",
     "    double diff(double x, double y) {\n",
     "        return x*y;\n",
     "    }\n",
@@ -59,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "//ay' + bxy = cx (First-Order Linear)\n",
+    "// ay' + bxy = cx (First-Order Linear)\n",
     "class DifferentialEquation {\n",
     "private:\n",
     "    double a, b, c;\n",
@@ -85,12 +90,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we use a class to represent a basic first-order linear differential equation of the form ay'+bxy=cx. The differentiation method, DE.diff(),evaluates the re-ordered expression: `y' = f(x,y) = ( cx - bxy ) / a`."
+    "Next, we use classes to represent two basic first-order linear differential equation of the form ay'+bxy=cx and y' = axy. The differentiation method, DE.diff(),evaluates the re-ordered expression: `y'=xy` or `y' = f(x,y) = ( cx - bxy ) / a`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,8 +104,8 @@
     "    double steps = ( target - ivp.x ) / h;\n",
     "    for(int i=0; i < steps; i++) {\n",
     "        approx.y += h * DE.diff(approx.x, approx.y);\n",
-    "        std::cout << approx.y << std::endl;\n",
     "        approx.x += h;\n",
+    "        std::cout << \"step = \" << i << \", x = \" << approx.x << \", y = \" << approx.y << std::endl;\n",
     "    }\n",
     "    return approx;\n",
     "}"
@@ -110,12 +115,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we define RK1. (Euler's) `rk1(DE, h, ivp, target)` takes 4 parameters, a defined DE, an h value, an initial value pair, (start point) and target x value. The approximate's x is incremented by steps of size h, while the y value is incremented by `h*f(x,y)`. The final pair generated is returned."
+    "Now we define RK1. (Euler's) `rk1(DE, h, ivp, target)` takes 4 parameters, a defined DE, an h value, an initial value pair, (start point) and target x value. The approximate's x is incremented by stepsof size h, while the y value is incremented by `h*f(x,y)`. The final pair generated is returned."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +132,24 @@
     "        F1 = h * DE.diff(approx.x, approx.y);\n",
     "        F2 = h * DE.diff((approx.x + h), (approx.y + F1));\n",
     "        approx.y += (F1+F2)/2;\n",
-    "        std::cout << approx.y << std::endl;\n",
     "        approx.x += h;\n",
+    "        std::cout << \"step = \" << i << \", x = \" << approx.x << \", y = \" << approx.y << std::endl;\n",
     "    }\n",
     "    return approx;\n",
     "}"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we define RK2 which is given by the equation:\n",
+    "img"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,16 +162,23 @@
     "        F2 = h * DE.diff((approx.x + (0.5*h)), (approx.y + (0.5*F1)));\n",
     "        F3 = h * DE.diff((approx.x + (0.75*h)), (approx.y + (0.75*F2)));\n",
     "        approx.y += (2*F1+3*F2+4*F3)/9;\n",
-    "        std::cout << approx.y << std::endl;\n",
     "        approx.x += h;\n",
+    "        std::cout << \"step = \" << i << \", x = \" << approx.x << \", y = \" << approx.y << std::endl;\n",
     "    }\n",
     "    return approx;\n",
     "}"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RK3 is given by the equation: img"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,8 +192,8 @@
     "        F3 = h * DE.diff((approx.x + (0.5*h)), (approx.y + (0.5*F2)));\n",
     "        F4 = h * DE.diff((approx.x + h), (approx.y + F3));\n",
     "        approx.y += (F1+2*F2+2*F3+F4)/6;\n",
-    "        std::cout << approx.y << std::endl;\n",
     "        approx.x += h;\n",
+    "        std::cout << \"step = \" << i << \", x = \" << approx.x << \", y = \" << approx.y << std::endl;\n",
     "    }\n",
     "    return approx;\n",
     "}"
@@ -183,12 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "X"
+    "RK4:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,53 +258,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30a851be00ec47e0a3a9da694e730715",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6056412b0e134db08bec3193ecd4bbcb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2a4ca09c5d7444e806436549168f61f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "source": [
+    "Use the UI below to define the DE coefficients, IVP, target, and step size:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#include \"xcpp/xdisplay.hpp\"\n",
     "using xcpp::display;\n",
@@ -296,66 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7443b642b3041e899c49270e445d6a4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ecb9c84ccbe455f8f174eda3b4b3b69",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "920432b2df944a6087a81373e627aa1f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37d6b6892fb8465ba280909479a851ec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(x);\n",
     "display(y);\n",
@@ -365,44 +292,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.5\n",
-      "1.88\n",
-      "1.6368\n",
-      "1.54651\n",
-      "1.51488\n",
-      "2.94\n",
-      "2.3185\n",
-      "1.95934\n",
-      "1.75466\n",
-      "1.63955\n",
-      "2.84634\n",
-      "2.20967\n",
-      "1.86607\n",
-      "1.68476\n",
-      "1.59122\n",
-      "2.85997\n",
-      "2.22532\n",
-      "1.87928\n",
-      "1.69446\n",
-      "1.59777\n",
-      "Approximated value: (3.5, 1.51488)\n",
-      "Error was: 0.0821162\n",
-      "Approximated value: (3.5, 1.63955)\n",
-      "Error was: 0.0425526\n",
-      "Approximated value: (3.5, 1.59122)\n",
-      "Error was: 0.00578461\n",
-      "Approximated value: (3.5, 1.59777)\n",
-      "Error was: 0.000765277\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "DifferentialEquation DE(a.value()); // Separable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DifferentialEquation DE(a.value(), b.value(), c.value()); // First order linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "// Define IVP\n",
     "pair ivp; \n",
@@ -410,17 +322,15 @@
     "ivp.y = y.value();\n",
     "\n",
     "// Approximate Value\n",
-    "DifferentialEquation DE(a.value(), b.value(), c.value());\n",
     "pair ans1 = rk1(DE, h.value(), ivp, target.value());\n",
     "pair ans2 = rk2(DE, h.value(), ivp, target.value());\n",
     "pair ans3 = rk3(DE, h.value(), ivp, target.value());\n",
     "pair ans4 = rk4(DE, h.value(), ivp, target.value());\n",
     "\n",
-    "\n",
     "// Calculate Error\n",
-    "pair soln; \n",
+    "pair soln;\n",
     "soln.x = 3.5;\n",
-    "soln.y = 1.597;\n",
+    "soln.y = 1.597; // Replace this with desired comparison point \n",
     "double err1 = error(ans1, soln);\n",
     "double err2 = error(ans2, soln);\n",
     "double err3 = error(ans3, soln);\n",
@@ -437,6 +347,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Timing of algorithms:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -446,10 +363,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Approximating"
+    "%timeit -n 10 -r 1 -p 6 rk2(DE, h.value(), ivp, target.value());"
    ]
   },
   {
@@ -458,15 +377,132 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%timeit -n 10 -r 1 -p 6 rk3(DE, h.value(), ivp, target.value());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit -n 10 -r 1 -p 6 rk4(DE, h.value(), ivp, target.value());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualizing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::vector<double> rk1_store(DifferentialEquation DE, \n",
+    "                              double h, \n",
+    "                              pair ivp, \n",
+    "                              double target,\n",
+    "                              std::size_t size,\n",
+    "                              bool x) {\n",
+    "    std::vector<double> store(size);\n",
+    "    pair approx = ivp;\n",
+    "    double steps = ( target - ivp.x ) / h;\n",
+    "    for(int i=0; i < steps; i++) {\n",
+    "        approx.y += h * DE.diff(approx.x, approx.y);\n",
+    "        approx.x += h;\n",
+    "        if (x) store.push_back(approx.x);\n",
+    "        else store.push_back(approx.y);\n",
+    "    }\n",
+    "    return store;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Graphing:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include \"random.hpp\"\n",
     "#include \"xplot/xfigure.hpp\"\n",
     "#include \"xplot/xmarks.hpp\"\n",
-    "#include \"xplot/xaxes.hpp\"\n",
-    "\n",
+    "#include \"xplot/xaxes.hpp\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "std::size_t size = 10;\n",
     "std::vector<double> x_data(size);\n",
     "std::iota(x_data.begin(), x_data.end(), 0);\n",
-    "std::vector<double> y_data = randn(size);\n"
+    "std::vector<double> y_data = randn(size);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xpl::linear_scale sx, sy;\n",
+    "auto ax_x = xpl::axis_generator(sx)\n",
+    "    .label(\"x\")\n",
+    "    .finalize();\n",
+    "auto ax_y = xpl::axis_generator(sy)\n",
+    "    .label(\"y\")\n",
+    "    .orientation(\"vertical\")\n",
+    "    .side(\"left\")\n",
+    "    .finalize();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto scatter1 = xpl::scatter_generator(sx, sy)\n",
+    "   .x(x_data)\n",
+    "   .y(y_data)\n",
+    "   .finalize();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto fig1 = xpl::figure_generator()\n",
+    "    .padding_x(0.025)\n",
+    "    .padding_y(0.025)\n",
+    "    .finalize();\n",
+    "fig1.add_mark(scatter1);\n",
+    "fig1.add_axis(ax_x);\n",
+    "fig1.add_axis(ax_y);\n",
+    "fig1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
