Fix graphing and add images

--- a/ode-estimation.ipynb
+++ b/ode-estimation.ipynb
@@ -144,7 +144,8 @@
    "metadata": {},
    "source": [
     "Next, we define RK2 which is given by the equation:\n",
-    "img"
+    "\n",
+    "<img src=\"images/rk2.png\" width=\"300px\" style=\"margin-left: 0px\"/>"
    ]
   },
   {
@@ -173,7 +174,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RK3 is given by the equation: img"
+    "RK3 is given by the equation:\n",
+    "\n",
+    "<img src=\"images/rk3.png\" width=\"350px\" style=\"margin-left: 0px\"/>"
    ]
   },
   {
@@ -203,7 +206,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RK4:"
+    "RK4:\n",
+    "\n",
+    "<img src=\"images/rk4.png\" width=\"375px\" style=\"margin-left: 0px\"/>"
    ]
   },
   {
@@ -350,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Timing of algorithms:"
+    "Timing the different algorithms:"
    ]
   },
   {
@@ -393,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizing:"
+    "Generating storing functions:"
    ]
   },
   {
@@ -422,6 +427,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::vector<double> rk2_store(DifferentialEquation DE, \n",
+    "                              double h, \n",
+    "                              pair ivp, \n",
+    "                              double target,\n",
+    "                              std::size_t size,\n",
+    "                              bool x) {\n",
+    "    std::vector<double> store(size);\n",
+    "    pair approx = ivp;\n",
+    "    double steps = ( target - ivp.x ) / h;\n",
+    "    double F1, F2;\n",
+    "    for(int i=0; i < steps; i++) {\n",
+    "        F1 = h * DE.diff(approx.x, approx.y);\n",
+    "        F2 = h * DE.diff((approx.x + h), (approx.y + F1));\n",
+    "        approx.y += (F1+F2)/2;\n",
+    "        approx.x += h;\n",
+    "        if (x) store.push_back(approx.x);\n",
+    "        else store.push_back(approx.y);\n",
+    "    }\n",
+    "    return store;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::vector<double> rk3_store(DifferentialEquation DE, \n",
+    "                              double h, \n",
+    "                              pair ivp, \n",
+    "                              double target,\n",
+    "                              std::size_t size,\n",
+    "                              bool x) {\n",
+    "    std::vector<double> store(size);\n",
+    "    pair approx = ivp;\n",
+    "    double steps = ( target - ivp.x ) / h;\n",
+    "    double F1, F2, F3;\n",
+    "    for(int i=0; i < steps; i++) {\n",
+    "        F1 = h * DE.diff(approx.x, approx.y);\n",
+    "        F2 = h * DE.diff((approx.x + (0.5*h)), (approx.y + (0.5*F1)));\n",
+    "        F3 = h * DE.diff((approx.x + (0.75*h)), (approx.y + (0.75*F2)));\n",
+    "        approx.y += (2*F1+3*F2+4*F3)/9;\n",
+    "        approx.x += h;\n",
+    "        if (x) store.push_back(approx.x);\n",
+    "        else store.push_back(approx.y);\n",
+    "    }\n",
+    "    return store;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::vector<double> rk4_store(DifferentialEquation DE, \n",
+    "                              double h, \n",
+    "                              pair ivp, \n",
+    "                              double target,\n",
+    "                              std::size_t size,\n",
+    "                              bool x) {\n",
+    "    std::vector<double> store(size);\n",
+    "    pair approx = ivp;\n",
+    "    double steps = ( target - ivp.x ) / h;\n",
+    "    double F1, F2, F3, F4;\n",
+    "    for(int i=0; i < steps; i++) {\n",
+    "        F1 = h * DE.diff(approx.x, approx.y);\n",
+    "        F2 = h * DE.diff((approx.x + (0.5*h)), (approx.y + (0.5*F1)));\n",
+    "        F3 = h * DE.diff((approx.x + (0.5*h)), (approx.y + (0.5*F2)));\n",
+    "        F4 = h * DE.diff((approx.x + h), (approx.y + F3));\n",
+    "        approx.y += (F1+2*F2+2*F3+F4)/6;\n",
+    "        approx.x += h;\n",
+    "        if (x) store.push_back(approx.x);\n",
+    "        else store.push_back(approx.y);\n",
+    "    }\n",
+    "    return store;\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,11 +522,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include \"random.hpp\"\n",
     "#include \"xplot/xfigure.hpp\"\n",
     "#include \"xplot/xmarks.hpp\"\n",
     "#include \"xplot/xaxes.hpp\""
@@ -442,14 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::size_t size = 10;\n",
+    "std::size_t size = 5; // Number of points, change this based on number of points displayed\n",
+    "\n",
     "std::vector<double> x_data(size);\n",
-    "std::iota(x_data.begin(), x_data.end(), 0);\n",
-    "std::vector<double> y_data = randn(size);"
+    "xs = rk1_store(DE, h.value(), ivp, target.value(), size, true);\n",
+    "std::vector<double> y_data(size);\n",
+    "ys = rk1_store(DE, h.value(), ivp, target.value(), size, false);"
    ]
   },
   {
@@ -490,11 +583,7 @@
     "auto fig1 = xpl::figure_generator()\n",
     "    .padding_x(0.025)\n",
     "    .padding_y(0.025)\n",
-    "    .finalize();\n",
-    "fig1.add_mark(scatter1);\n",
-    "fig1.add_axis(ax_x);\n",
-    "fig1.add_axis(ax_y);\n",
-    "fig1"
+    "    .finalize();"
    ]
   },
   {
@@ -502,7 +591,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig1.add_mark(scatter1);\n",
+    "fig1.add_axis(ax_x);\n",
+    "fig1.add_axis(ax_y);\n",
+    "fig1"
+   ]
   }
  ],
  "metadata": {
